# WavePlayer

./: CMakeLists.txt  README.md  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
plugins/: qmedianavigator.cpp  qmedianavigator.h  qvolumeslider.cpp  qvolumeslider.h  qvolumewidget.cpp  qvolumewidget.h  svgpushbutton.cpp  svgpushbutton.h
